[package]
name = "tree_walk_api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "tree_walk_api"
path = "src/main.rs"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }

[dev-dependencies]
reqwest = "0.12.5"
